collected all paper-specific stuff in paper/

--- a/paper/atlas_figure/atlas_figure.ipynb
+++ b/paper/atlas_figure/atlas_figure.ipynb
@@ -21,8 +21,8 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
     "%matplotlib inline\n",
-    "import hcp_utils as hcp\n",
-    "import copy"
+    "# import hcp_utils as hcp\n",
+    "# import copy"
    ]
   },
   {
@@ -65,7 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = copy.deepcopy(hcp.yeo7)\n",
+    "# b = copy.deepcopy(hcp.yeo7)\n",
+    "b = {}\n",
     "b['ids'] = np.arange(0,118)\n",
     "b['nontrivial_ids'] = np.arange(1,118)\n",
     "b['map_all'] = np.array(atlas116.get_fdata().flatten().astype(int))\n",
