--- a/paper/experiments_realdata/analyze_maximization_convergence.ipynb
+++ b/paper/experiments_realdata/analyze_maximization_convergence.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d48a182",
+   "metadata": {},
+   "source": [
+    "These loss curves were generated in one random run of each model - there is no script to reproduce them. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e7f988bc",
