--- a/paper/experiments_phaserando/analyze_phase_controlled_OHBM.ipynb
+++ b/paper/experiments_phaserando/analyze_phase_controlled_OHBM.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,6 @@
     "        df0 = df[df['modelname_old']==models]\n",
     "        df1 = df0[df0['rank']==rank]\n",
     "        df1 = df1[df1['initialization']!='Analytical \\n maximization']\n",
-    "        # df1 = df1[df1['initialization']!='Analytical \\n maximization']\n",
     "        sns.boxplot(y='train_NMI', x='initialization',hue='group', data=df1, ax=axs[i,j], palette=palette2,legend=True)\n",
     "        if i==0 and j==0:\n",
     "            axs[1,1].legend(loc='upper right', fontsize=10, title='Inference', title_fontsize=12, handles=axs[i,j].get_legend_handles_labels()[0], labels=axs[i,j].get_legend_handles_labels()[1])\n",
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +279,9 @@
     }
    ],
    "source": [
-    "from PCMM.helper_functions import horizontal_boxplot\n",
+    "import sys\n",
+    "sys.path.append(\"..\") # Adds higher directory to python modules path.\n",
+    "from helper_functions_paper import horizontal_boxplot\n",
     "df2 = df[df['group']=='Torch']\n",
     "df2 = df2[df2['initialization']=='Consecutive \\n rank']\n",
     "df_km = df_kmeans[df_kmeans['init_method']=='++']\n",
@@ -291,145 +292,6 @@
     "# in boldface\n",
     "fig.suptitle('Clustering performance on phase-controlled fMRI data',fontsize=12, fontweight='bold', y=0.92)\n",
     "fig.savefig('figures/torchvsEM_phase_narrowband_controlled_results_horizontal_boxplot.pdf', bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ranks = [1,5,10,25,50,100]\n",
-    "# type = 1\n",
-    "# order = ['Mixture: Complex Watson',\n",
-    "#     *['Mixture: Complex ACG rank='+str(rank) for rank in ranks],\n",
-    "#     'Mixture: Complex diametrical','space1','space2',\n",
-    "#     *['Mixture: MACG rank='+str(rank) for rank in ranks],\n",
-    "#     *['Mixture: Singular Wishart rank='+str(rank) for rank in ranks],\n",
-    "#     'K-means: Grassmann','K-means: Weighted Grassmann','space3','space4',\n",
-    "#     'Mixture: Watson',\n",
-    "#     *['Mixture: ACG rank='+str(rank) for rank in ranks],\n",
-    "#     'K-means: Diametrical','K-means: Least squares (sign-flip)','space5','space6',\n",
-    "#     *['Mixture: Gaussian rank='+str(rank) for rank in ranks],'space7','space8',\n",
-    "#     *['Mixture: Complex Gaussian rank='+str(rank) for rank in ranks]]\n",
-    "# palette_husl = sns.color_palette(\"husl\", n_colors=11, desat=1)\n",
-    "# palette_husl.append((0.5,0.5,0.5))\n",
-    "# palette_husl.append((0.3,0.3,0.3))\n",
-    "# palette_husl2 = [palette_husl[0]]+[palette_husl[1]]*len(ranks)+[palette_husl[2]]+[palette_husl[-1]]*2+[palette_husl[3]]*len(ranks)+[palette_husl[4]]*len(ranks)+[palette_husl[5]]+[palette_husl[6]]+[palette_husl[-1]]*2+[palette_husl[7]]+[palette_husl[8]]*len(ranks)+[palette_husl[9]]+[palette_husl[10]]+[palette_husl[-1]]*2+[palette_husl[11]]*len(ranks)+[palette_husl[-1]]*2+[palette_husl[12]]*len(ranks)\n",
-    "# # df_fig = df[df['Set']=='Out-of-sample test']\n",
-    "# for i in range(1,9):\n",
-    "#     df_fig2 = pd.concat([df_fig,pd.DataFrame({'NMI':[np.nan],'names2':['space'+str(i)]}, index=[0])], ignore_index=True)\n",
-    "# fig = plt.figure(figsize=(10,7))\n",
-    "# if type == 1:\n",
-    "#     sns.boxplot(x='NMI', y='names2', data=df_fig2, palette=palette_husl2, order=order)\n",
-    "#     plt.xlabel('Normalized mutual information')\n",
-    "#     plt.xlim([-0.01,1.01])\n",
-    "#     xtitlepos = -0.02\n",
-    "# else:\n",
-    "#     sns.boxplot(x='classification_accuracy', y='names2', data=df_fig2, palette=palette_husl2, order=order)\n",
-    "#     plt.xlabel('Classification accuracy')\n",
-    "#     plt.xlim([0.49,1.01])\n",
-    "#     xtitlepos = 0.48\n",
-    "# plt.ylabel('')\n",
-    "\n",
-    "# plt.ylim([34,-2])\n",
-    "# # add extra text next to y-ticks that aren't there\n",
-    "# ticks_per_group = np.array([2+len(ranks), 2+2*len(ranks), 3+len(ranks), len(ranks), len(ranks)])\n",
-    "# additional_ticks = np.concatenate([[0],np.cumsum(ticks_per_group+2)])\n",
-    "# # np.concatenate([np.arange(2+len(ranks)),np.arange(2+2*len(ranks))+7,np.arange(3+len(ranks))+17,np.arange(len(ranks))+25,np.arange(len(ranks))+30])\n",
-    "# ticks_list = [np.arange(ticks_per_group[i]) + additional_ticks[i] for i in range(len(ticks_per_group))]\n",
-    "# ticks_list = np.concatenate(ticks_list)\n",
-    "# # print(ticks_list)\n",
-    "# # print(np.concatenate([np.arange(2+len(ranks)),np.arange(2+2*len(ranks))+7,np.arange(3+len(ranks))+17,np.arange(len(ranks))+25,np.arange(len(ranks))+30]))\n",
-    "# # additional_ticks = [0, 7, 17, 25, 30]\n",
-    "# # plt.yticks(np.concatenate([np.arange(2+len(ranks)),np.arange(2+2*len(ranks))+7,np.arange(3+len(ranks))+17,np.arange(len(ranks))+25,np.arange(len(ranks))+30]),fontsize=8)\n",
-    "\n",
-    "# if len(ranks)==3:\n",
-    "#     ytitlepos = [-0.7,6.3,16.3,24.3,29.3]\n",
-    "#     plt.yticks(ticks_list, fontsize=8)\n",
-    "# elif len(ranks)==5:\n",
-    "#     ytitlepos = [-0.7,8.3,22.3,32.3,39.3]\n",
-    "#     plt.yticks(ticks_list, fontsize=7)\n",
-    "# elif len(ranks)==6:\n",
-    "#     ytitlepos = [-0.7,9.3,25.3,36.3,44.3]\n",
-    "#     plt.yticks(ticks_list, fontsize=6)\n",
-    "    \n",
-    "# plt.text(xtitlepos, ytitlepos[0], 'Complex dynamic phase coherence maps', fontsize=8,fontweight='bold', ha='right')\n",
-    "# plt.text(xtitlepos, ytitlepos[1], 'Rank-2 cosine phase coherence maps', fontsize=8,fontweight='bold', ha='right')\n",
-    "# plt.text(xtitlepos, ytitlepos[2], 'LEiDA', fontsize=8,fontweight='bold', ha='right')\n",
-    "# plt.text(xtitlepos, ytitlepos[3], 'Time-series', fontsize=8,fontweight='bold', ha='right')\n",
-    "# plt.text(xtitlepos, ytitlepos[4], 'Analytic signal', fontsize=8,fontweight='bold', ha='right')\n",
-    "\n",
-    "# # change the line styles\n",
-    "# styles = ['-']+['-']*len(ranks)+['--']+['-']*len(ranks)+['-']*len(ranks)+['--']*2+['-']+['-']*len(ranks)+['--']*2+['-']*len(ranks)+['-']*len(ranks)\n",
-    "# #repeat every element of styles six times\n",
-    "# styles2 = [item for item in styles for i in range(5)]\n",
-    "# l = 0\n",
-    "# for i,artist in enumerate(plt.gca().get_children()):\n",
-    "#     if isinstance(artist, plt.Line2D):\n",
-    "#         #if linestyle is not none\n",
-    "#         if artist.get_linestyle() != 'None':\n",
-    "#             artist.set_linestyle(styles2[l])\n",
-    "#             l+=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# order = ['Mixture: Complex Watson',\n",
-    "#          'Mixture: Complex ACG rank=1','Mixture: Complex ACG rank=5','Mixture: Complex ACG rank=10',\n",
-    "#          'K-means: Complex diametrical','space1','space2',\n",
-    "#          'Mixture: MACG rank=1','Mixture: MACG rank=5','Mixture: MACG rank=10',\n",
-    "#          'Mixture: Singular Wishart rank=1','Mixture: Singular Wishart rank=5','Mixture: Singular Wishart rank=10',\n",
-    "#          'K-means: Grassmann','K-means: Weighted Grassmann','space3','space4',\n",
-    "#          'Mixture: Watson', \n",
-    "#          'Mixture: ACG rank=1','Mixture: ACG rank=5','Mixture: ACG rank=10',\n",
-    "#          'K-means: Diametrical','K-means: Least squares \\n(sign-flipped eigenvectors)','space5','space6',\n",
-    "#          'Mixture: Gaussian rank=1','Mixture: Gaussian rank=5','Mixture: Gaussian rank=10','space7','space8',\n",
-    "#          'Mixture: Complex Gaussian rank=1','Mixture: Complex Gaussian rank=5','Mixture: Complex Gaussian rank=10']\n",
-    "# palette_husl = sns.color_palette(\"husl\", n_colors=11, desat=1)\n",
-    "# palette_husl.append((0.5,0.5,0.5))\n",
-    "# palette_husl.append((0.3,0.3,0.3))\n",
-    "# palette_husl2 = [palette_husl[0]]+[palette_husl[1]]*3+[palette_husl[2]]+[palette_husl[-1]]*2+[palette_husl[3]]*3+[palette_husl[4]]*3+[palette_husl[5]]+[palette_husl[6]]+[palette_husl[-1]]*2+[palette_husl[7]]+[palette_husl[8]]*3+[palette_husl[9]]+[palette_husl[10]]+[palette_husl[-1]]*2+[palette_husl[11]]*3+[palette_husl[-1]]*2+[palette_husl[12]]*3\n",
-    "\n",
-    "# df2 = df[df['group']=='Torch']\n",
-    "# df2 = df2[df2['initialization']=='All']\n",
-    "# df_km = df_kmeans[df_kmeans['init_method']=='++']\n",
-    "# df_fig = pd.concat([df2,df_km], ignore_index=True)\n",
-    "# # add dummy rows corresponding to the space between the groups\n",
-    "# for i in range(1,9):\n",
-    "#     df_fig = pd.concat([df_fig,pd.DataFrame({'train_NMI':[np.nan],'names2':['space'+str(i)]}, index=[0])], ignore_index=True)\n",
-    "\n",
-    "# fig = plt.figure(figsize=(10,7))\n",
-    "# sns.boxplot(x='train_NMI', y='names2', data=df_fig, palette=palette_husl2, order=order)\n",
-    "# plt.xlabel('Normalized mutual information')\n",
-    "# plt.ylabel('')\n",
-    "# plt.xlim([0,1])\n",
-    "# plt.ylim([34,-2])\n",
-    "# plt.yticks(np.concatenate([np.arange(5),np.arange(8)+7,np.arange(6)+17,np.arange(3)+25,np.arange(3)+30]),fontsize=8)\n",
-    "# # add extra text next to y-ticks that aren't there\n",
-    "# plt.text(-0.01, -0.7, 'Complex dynamic phase coherence maps', fontsize=8,fontweight='bold', ha='right')\n",
-    "# plt.text(-0.01, 6.3, 'Rank-2 cosine phase coherence maps', fontsize=8,fontweight='bold', ha='right')\n",
-    "# plt.text(-0.01, 16.3, 'Leading eigenvector of\\ncosine phase coherence maps', fontsize=8,fontweight='bold', ha='right')\n",
-    "# plt.text(-0.01, 24.3, 'Time-series', fontsize=8,fontweight='bold', ha='right')\n",
-    "# plt.text(-0.01, 29.3, 'Analytic signal', fontsize=8,fontweight='bold', ha='right')\n",
-    "\n",
-    "# # change the line styles\n",
-    "# styles = ['-']+['-']*3+['--']+['-']*3+['-']*3+['--']*2+['-']+['-']*3+['--']*2+['-']*3+['-']*3\n",
-    "# #repeat every element of styles six times\n",
-    "# styles2 = [item for item in styles for i in range(5)]\n",
-    "# l = 0\n",
-    "# for i,artist in enumerate(plt.gca().get_children()):\n",
-    "#     if isinstance(artist, plt.Line2D):\n",
-    "#         #if linestyle is not none\n",
-    "#         if artist.get_linestyle() != 'None':\n",
-    "#             artist.set_linestyle(styles2[l])\n",
-    "#             l+=1\n",
-    "# # print(l)\n",
-    "# plt.savefig('figures/torchvsEM_phase_narrowband_controlled_results_summarized3.png', bbox_inches='tight', dpi=300)"
    ]
   }
  ],
