--- a/paper/experiments_realdata/analyze_model_performance_rest.ipynb
+++ b/paper/experiments_realdata/analyze_model_performance_rest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,9 @@
     "import seaborn as sns\n",
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
-    "from helper_functions_realdata import *"
+    "import sys\n",
+    "sys.path.append(\"..\") # Adds higher directory to python modules path.\n",
+    "from helper_functions_paper import *"
    ]
   },
   {
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +84,6 @@
     "df2 = pd.read_csv('../data/results/116_results/REST1REST2rank_realdata_Complex_Normal_K=1.csv')\n",
     "df3 = pd.read_csv('../data/results/116_results/REST1REST2rank_realdata_Normal_K=1.csv')\n",
     "df_rank = pd.concat([df1,df2,df3])\n",
-    "# df_rank = df1\n",
     "df_rank = rename(df_rank)\n",
     "df_rank = df_rank[df_rank['inner']==0]"
    ]
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -137,10 +138,6 @@
     }
    ],
    "source": [
-    "# df_rank['modelname'] = df_rank['modelname'].replace('Complex_ACG','Mixture: Complex ACG')\n",
-    "# df_rank['modelname'] = df_rank['modelname'].replace('Complex_Normal','Mixture: Complex Gaussian')\n",
-    "# df_rank['modelname'] = df_rank['modelname'].replace('Normal','Mixture: Gaussian')\n",
-    "# df_rank['Model'] = df_rank['modelname']\n",
     "order2 = ['Mixture: Complex ACG','Mixture: Gaussian','Mixture: Complex Gaussian']\n",
     "\n",
     "# palette_reduced2 = [palette_reduced[0],palette_reduced[2],palette_reduced[1]]\n",
@@ -170,10 +167,6 @@
     "    axs[i].set_xticks([1,2,3,4,5,6,7,8,9,10])\n",
     "    # axs[1,i].set_ylim(np.mean(df4[(df4['names2']==model+' rank=1')&(df4['K']==1)]['loglik'])-5, np.mean(df4[(df4['names2']==model+' rank=100')&(df4['K']==2)]['loglik'])+10)\n",
     "    axs[i].set_xlabel('Number of components (K)')\n",
-    "# sns.lineplot(x='K',y='loglik',data=df3[df3['names2']=='Mixture: Gaussian rank=1'],style='Set',hue='modelname', palette=palette_reduced[0:], linewidth=1.5,err_style='bars',errorbar='se',legend=False,ax=axs[1,0])\n",
-    "# sns.lineplot(x='K',y='loglik',data=df3[df3['names2']=='Mixture: Gaussian rank=10'],style='Set',hue='modelname', palette=palette_reduced[0:], linewidth=1.5,err_style='bars',errorbar='se',legend=False,ax=axs[1,0])\n",
-    "# sns.lineplot(x='K',y='loglik',data=df3[df3['names2']=='Mixture: Gaussian rank=25'],style='Set',hue='modelname', palette=palette_reduced[0:], linewidth=1.5,err_style='bars',errorbar='se',legend=False,ax=axs[1,0])\n",
-    "# sns.lineplot(x='K',y='loglik',data=df3[df3['names2']=='Mixture: Gaussian rank=50'],style='Set',hue='modelname', palette=palette_reduced[0:], linewidth=1.5,err_style='bars',errorbar='se',legend=False,ax=axs[1,0])\n",
     "\n",
     "xpos = 0.90\n",
     "axs[1].text(xpos, df4[(df4['names2']=='Mixture: Gaussian rank=1')&(df4['K']==1)]['loglik'].mean(), 'r=1', fontsize=8,ha='right',va='center');\n",
@@ -201,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,9 +213,7 @@
     "df_rank['modelname'] = df_rank['modelname'].replace('Complex_Normal','Mixture: Complex Gaussian')\n",
     "df_rank['modelname'] = df_rank['modelname'].replace('Normal','Mixture: Gaussian')\n",
     "df_rank['Model'] = df_rank['modelname']\n",
-    "# order2 = ['Mixture: Gaussian','Mixture: Complex Gaussian','Mixture: Complex ACG']\n",
     "order2 = ['Mixture: Complex ACG','Mixture: Gaussian','Mixture: Complex Gaussian']\n",
-    "# palette_reduced2 = [palette_reduced[0],palette_reduced[2],palette_reduced[1]]\n",
     "fig,axs = plt.subplots(1, 3, figsize=(10, 2.5),layout='constrained')\n",
     "for i,model in enumerate(order2):\n",
     "    sns.lineplot(x='rank', y='loglik', data=df_rank[df_rank['Model']==model],style='Set',hue='Model', palette=[palette_reduced[i]], linewidth=1.5,err_style='bars',errorbar='se',legend=False,ax=axs[i])\n",
